2008-01-30  Atsushi Enomoto  <atsushi@ximian.com>

	* XNodeReader.cs : when it is created from non-document XNode, do
	  not go beyond the source node. Fixed bug #356522 (the third case).

2008-01-29  Atsushi Enomoto  <atsushi@ximian.com>

	* XNodeReader.cs : NodeType should return None at Initial state.
	  Fixed bug #356522.

2008-01-29  Atsushi Enomoto  <atsushi@ximian.com>

	* XNodeReader.cs : when created from non-document node, the first
	  call to Read() should not move the node to its first child.

2008-01-29  Atsushi Enomoto  <atsushi@ximian.com>

	* XNodeReader.cs : Probably fixed (reopened) bug #356522.
	  NamespaceURI for "xmlns" attribute was "", which should be
	  http://www.w3.org/2000/xmlns/ (in XAttribute its namespace is "").

2008-01-29  Atsushi Enomoto  <atsushi@ximian.com>

	* XElement.cs, XNamespace.cs, XNodeNavigator.cs, XAttribute.cs,
	  XNodeReader.cs, XName.cs, XNodeWriter.cs :
	  XNamespace.Blank -> XNamespace.None (and .None is implemented.)

2008-01-28  Atsushi Enomoto  <atsushi@ximian.com>

	* XNodeReader.cs : Fixed bug #356522. Attribute name retrieval was
	  wrong.

2008-01-26  Atsushi Enomoto  <atsushi@ximian.com>

	* XNodeReader.cs : fixed GetAttribute() that wrongly resulted in
	  returning "" instead of null. Fixed bug #335975.

2007-11-27  Atsushi Enomoto  <atsushi@ximian.com>

	* XStreamingElement.cs : implement some members.

2007-11-23  Marek Safar  <marek.safar@gmail.com>

	* XElement.cs, XNamespace.cs, XStreamingElement.cs, XObject.cs,
	XDocument.cs: API update.
	
	* XObjectChangeEventHandler.cs: Removed.

2007-10-26  Atsushi Enomoto  <atsushi@ximian.com>

	* XNode.cs : use ConformanceLevel.Auto for ToString().
	  Fixed bug #336927.

2007-10-26  Atsushi Enomoto  <atsushi@ximian.com>

	* XElement.cs, XAttribute.cs : implemented missing explicit operators.
	* XNamespace.cs : Blank is not public anymore.

2007-08-26  Marek Safar  <marek.safar@gmail.com>

	* XElement.cs : Implemented explicit operators.
	